trying to deploy

--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,3 +1,2 @@
 
-web: gunicorn my_app.wsgi:application --log-file -
-worker: python manage.py celery -A my_app worker --loglevel=info
+web: gunicorn backend.wsgi:application --log-file -
