--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
